# GWS-CLI-For-Agents

./: .gitignore  Cargo.toml  README.md
.agents/skills/gws-cli/: SKILL.md
src/: auth.rs  client.rs  docs.rs  drive.rs  gmail.rs  main.rs  output.rs  schema.rs  sheets.rs
