[package]
name = "gws-cli"
version = "0.1.0"
edition = "2021"
authors = ["Agent-Native CLI for Google Workspace"]
description = "Lightweight agent-native CLI for Google Workspace APIs"
license = "MIT"
repository = "https://github.com/yourusername/gws-cli"

[features]
default = []
gmail = []
drive = []
docs = []
sheets = []
all = ["gmail", "drive", "docs", "sheets"]

[[bin]]
name = "gws"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
jsonwebtoken = "9"
urlencoding = "2"
mime_guess = "2"
